--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "C_Cpp.intelliSenseEngine": "default",
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.autoAddFileAssociations": true,
+    "C_Cpp.codeAnalysis.clangTidy.enabled": true,
     "C_Cpp.autocomplete": "default",
     "C_Cpp.workspaceSymbols": "All",
     "C_Cpp.doxygen.generatedStyle": "/**",
